fix: text overflow inside toolbaroverflow fixed

--- a/src/toolbar.scss
+++ b/src/toolbar.scss
@@ -182,6 +182,7 @@ $title-toolbar-height: 2.75rem;
           // background-color: var(@sapUiToolbarSeparatorColor);
           background-color: var(--sapGroup_TitleBorderColor);
         }
+
         .#{$block}__overflow__label {
           &.#{$fd-namespace}-label {
             margin: 0.375rem 0;
@@ -192,6 +193,12 @@ $title-toolbar-height: 2.75rem;
           &.#{$fd-namespace}-form-label {
             margin: 0.625rem 0 0.125rem 0;
           }
+        }
+        .#{$block}__overflow__form-label,
+        .#{$block}__overflow__label {
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
         }
       }
     }
